# data-compression-analyzer

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/compression/: ArchiveCompressor.cpp  ArchiveCompressor.h  Compressor.cpp  Compressor.h  GzipCompressor.cpp  GzipCompressor.h
src/gui/: MainWindow.cpp  MainWindow.h
src/utils/: FileHandler.cpp  FileHandler.h
